--- a/appcompat-v1/src/main/res/values/strings.xml
+++ b/appcompat-v1/src/main/res/values/strings.xml
@@ -11,17 +11,6 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="com.pointinside.android.util">
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
-    </application>
-
-</manifest>
+<resources>
+    <string name="lib_name">PIAndroidUtil</string>
+</resources>
